[package]
authors = ["yubrot <yubrot@gmail.com>"]
edition = "2018"
name = "wasm-sandbox"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]
name = "wasm_sandbox"

[features]
default = ["wee_alloc", "console_error_panic_hook"]

[dependencies]
console_error_panic_hook = {version = "0.1", optional = true}
js-sys = "0.3"
wasm-bindgen = "0.2"
web-sys = {version = "0.3", features = ["console"]}
wee_alloc = {version = "0.4", optional = true}

[dev-dependencies]
wasm-bindgen-test = "0.3"
